# mcman

./: mcman.environment  mcman.limits.conf  mcman.py  mcman.spec  minecraft.firewalld.xml  pyproject.toml  systemd.mcman.target  systemd.mcman@.service
instance/: constant.py  instance.py
provider/: __init__.py  base.py  constant.py  mojang.py  paper.py  purpur.py
