[tool.poetry]
name = "mcman"
version = "0.1.0"
description = ""
authors = ["Alan Willis <alan@amekoshi.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
blessings = "^1.7"
pylint = "^2.15.9"
jmespath = "^1.0.1"
pystemd = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
